front + middleware basicos
